# femipo

./: .gitignore  LICENSE  Xtract.jnl  documentation.md  fort.20  main.py  pyproject.toml
src/: T3_FEM.idx  T3_FEM.mod
src/femipo/: __init__.py
src/femipo/fem/: asembly.py  cards_import.py  element_parameters.py  fem.py  fem_base.py  fem_modification.py  read.py  revolve.py  shell.py  write.py
src/femipo/fem/cards/: belfix.py  bello2.py  beuslo.py  bgrav.py  bldep.py  bnbcd.py  bnload.py  date.py  gbarm.py  gbeamg.py  gbox.py  gchan.py  gchanr.py  gcoord.py  geccen.py  gelmnt1.py  gelref1.py  gelth.py  giorh.py  giorhr.py  glsec.py  gnode.py  gpipe.py  gsetmemb.py  gunivec.py  hierarch.py  hsupstat.py  hsuptran.py  ident.py  iend.py  mgmass.py  misosel.py  sconcept.py  sconmesh.py  sconplis.py  sprocode.py  sprosele.py  tdload.py  tdmater.py  tdnode.py  (+5 more)
src/femipo/func/: boundary_func.py  element_func.py  func_geo.py  func_template.py  load_func.py  load_surf.py  node_func.py  set_func.py
tests/: test_bnload.py  test_func_translate_nodes.py  test_gbeamg.py  test_gcoord.py  test_gelmnt1.py  test_get_element_side.py  test_shell.py
